# novel_outline_generator

./: .env.sample  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  async_llm.py  config.py  coverage.json  create_env.py  exceptions.py  main.py  merger.py  prompts.py  provider.txt  pyproject.toml  requirements.txt  run.bat  run.sh  splitter.py  tokenizer.py  utils.py  validators.py  web_api.py
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  test.yml
docs/: API_CONFIGURATION.md
models/: __init__.py  character.py  outline.py  processing_state.py
services/: AGENTS.md  __init__.py  eta_estimator.py  file_service.py  llm_service.py  novel_processing_service.py  progress_service.py  task_queue.py  token_estimator.py
tests/: AGENTS.md  __init__.py  conftest.py  test_config.py  test_eta_estimator.py  test_exceptions.py  test_file_service.py  test_llm_service.py  test_logging_config.py  test_models_character.py  test_models_outline.py  test_novel_processing_service.py  test_partial_completion.py  test_processing_state.py  test_progress_service.py  test_prompts.py  test_resume_processing.py  test_splitter.py  test_splitter_comprehensive.py  test_task_queue.py  test_token_estimator.py  test_tokenizer.py  test_utils.py  test_validators.py  test_web_api.py
ui/: index.html
