[project]
name = "novel-outline-generator"
version = "0.1.0"
description = "Novel outline generator using LLM"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.3.0",
    "zhipuai>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
